add refactoring on RTK query

--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -8,7 +8,7 @@
   margin-left: 13px;
   border-radius: 5px;
   padding: 3px 7px;
-  border: 1px solid #d1cccc;
+    border: 1px solid #4985ff;
 }
 .btn:hover,
 .btn:focus {
