--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,6 +1,7 @@
 .form {
   width: 333px;
-  border: 1px solid;
+   border: 1px solid #d1cccc;
+  border-radius: 13px;
   padding: 13px 11px;
 }
 
@@ -28,7 +29,7 @@
   display: block;
   border-radius: 5px;
   padding: 3px 7px;
-  border: 1px solid #d1cccc;
+  border: 1px solid #4985ff;
 }
 .btn:hover,
 .btn:focus {
@@ -38,3 +39,4 @@
   box-shadow: 0px 1px 1px rgb(0 0 0 / 12%), 0px 4px 4px rgb(0 0 0 / 6%),
     1px 4px 6px rgb(0 0 0 / 16%);
 }
+
